# ferrink

./: .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  Cargo.toml  PUBLIC_SOURCE_AUDIT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml
LICENSES/: Apache-2.0.txt  DEPENDENCY_LICENSES.tsv
apps/io.home-assistant.dashboard/: launch-kindle.sh  manifest.toml
apps/org.koreader.reader/: launch-kindle.sh  manifest.toml  stage-fast-atkinson.sh
apps/org.koreader.reader/font-assets/: Atkinson-Hyperlegible-OFL-1.1.txt  README.md  SHA256SUMS
apps/org.koreader.reader/koreader-patches/: 2-ferrink-startup.lua
crates/ferrink-characterize-display/: Cargo.toml
crates/ferrink-characterize-display/src/: ffi.rs  main.rs
crates/ferrink-characterize-plan/: Cargo.toml
crates/ferrink-characterize-plan/src/: main.rs
crates/ferrink-manifest/: Cargo.toml
crates/ferrink-manifest/src/: lib.rs
crates/ferrink-platform/: Cargo.toml
crates/ferrink-platform-kindle/: Cargo.toml
crates/ferrink-platform-kindle/src/: input_grab.rs  input_loop.rs  lib.rs  linux.rs  linux_display.rs  linux_pixel.rs  linux_stock.rs  pixel_card.rs  revalidate.rs  slint_bridge.rs  stock_repaint.rs  touch_card.rs  zelda.rs
crates/ferrink-platform/src/: active_display_plan.rs  display_trace.rs  framebuffer.rs  input_event.rs  lib.rs  probe.rs  profile.rs  redaction.rs  refresh.rs  runtime.rs  trace.rs  transform.rs
crates/ferrink-platform/tests/: framebuffer_fixtures.rs  input_event_fixtures.rs  profile_fixtures.rs  runtime_fixtures.rs  trace_fixtures.rs
crates/ferrink-platform/tests/fixtures/: README.md  display-trace-reference-portrait-active-v1.json  display-trace-shape-v1.json  input-trace-ordering-v1.json  probe-reference-landscape.json  probe-reference-portrait.json  reference-portrait-display-mechanism-plan-v1.json
crates/ferrink-probe/: Cargo.toml
crates/ferrink-probe/src/: collector.rs  elf.rs  main.rs
crates/ferrink-shell/: Cargo.toml  build.rs
crates/ferrink-shell/examples/: procedural_backgrounds.rs
crates/ferrink-shell/src/: device.rs  kindle_device.rs  lib.rs  literary_clock.rs  main.rs  procedural_background.rs
crates/ferrink-shell/tests/: keyboard.rs  kindle_pointer.rs  screenshots.rs
crates/ferrink-shell/ui/: shell.slint
crates/ferrink-supervisor/: Cargo.toml
crates/ferrink-supervisor/src/: crash_budget.rs  lib.rs  linux_kindle.rs
device-profiles/: reference-landscape.toml  reference-portrait.toml
docs/: ARCHITECTURE.md  KINDLE_DEVICE_TOOL.md  LICENSING_AND_DISTRIBUTION.md  UPSTREAM_RESEARCH.md
docs/design/: README.md  two-tone-jacquard-reference.html
packaging/kindle/: ferrink-boot  ferrink.conf
tools/: audit-public-source  deploy-kindle-shell  install-kindle-boot  kindle  kindle-ssh.config.example  test-kindle-boot
