[package]
name = "ferrink-manifest"
description = "Versioned application manifests and registration catalog for ferrink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
toml.workspace = true
