[package]
name = "ferrink-platform"
description = "Toolkit-neutral ferrink device capability and profile types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
