[package]
name = "ferrink-probe"
description = "Read-only, redacted ferrink device inventory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ferrink-platform = { path = "../ferrink-platform" }
libc.workspace = true
serde_json.workspace = true
